# 20251001cirrus

./: .version.txt  create_knights_xml.py  lambda_functions.py  list_comps_etc.py  type_hinting_examples.py  unpacking_fun.py
ANSWERS/carddeck/src/carddeck.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
EXAMPLES/: bm_ignore_vs_char_class.py  csv_read.py  custom_sort_keys.py  exception_else.py  exception_multiple.py  exception_simple.py  hints_variables.py  knights.xml  lambda_example.py  line_trimmer.py  logging_custom_format.py  logging_exception.py  mpl_draggable_rectangle.py  mpl_lasso_demo.py  mpl_popup.py  np_save_load.py  np_shapes.py  regex_finding_matches.py  regex_flags.py  regex_group.py  regex_newlines.py  regex_split.py  set_comprehension.py  thr_pool_mw.py  xml_planets_xpath1.py  yaml_load_solar.py
EXAMPLES/temperature/src/temperature.egg-info/: PKG-INFO
EXAMPLES/temperature_scripts/src/temperature.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
EXAMPLES/tests/: conftest.py  silly.py  test_mark.py  test_parametrization.py  test_simple_fixture.py  test_skip.py
cirrus/: README.md  pyproject.toml
cirrus/docs/source/: conf.py  index.rst
cirrus/src/: cirrus.py
cirrus/src/cirrus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cirrus/tests/: test_cirrus.py
