[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# the above is always required

[project]
name = "cirrus"
version = "1.0.0"
authors = [
    { name="John Strickler", email="jstrickler@gmail.com" },
]
description = "All about the Cirrus company"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
#    'roman >= 3.0',
]


[project.scripts]
script='cirrus:_cli_script'



